--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,18 @@
             <version>3.141.59</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-firefox-driver</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-edge-driver</artifactId>
+            <version>2.47.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
